[gd_scene load_steps=13 format=3 uid="uid://cmo5ssdte7tsp"]

[ext_resource type="PackedScene" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="1_af6c4"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="2_gjfns"]
[ext_resource type="PackedScene" uid="uid://ddsj74hpt1kgb" path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_physics_tac_glove.tscn" id="3_g2yue"]
[ext_resource type="PackedScene" uid="uid://cxlfmvplssqp8" path="res://components/grab_function.tscn" id="4_xy7vm"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="5_qd4yl"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="6_b3hsq"]
[ext_resource type="PackedScene" uid="uid://b6xesntm4qeo5" path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_physics_tac_glove.tscn" id="7_8ghvb"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="8_t4vmy"]
[ext_resource type="Script" path="res://scripts/stateMachineStuff/PlayMode.gd" id="10_djynx"]
[ext_resource type="Script" path="res://components/state_machine_component.gd" id="10_nwkhs"]
[ext_resource type="Script" path="res://scripts/stateMachineStuff/BuildMode.gd" id="11_rdasi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hbmkj"]
radius = 0.2
height = 1.4

[node name="XROrigin3D" type="XROrigin3D"]
current = true

[node name="XRCamera3D" type="XRCamera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
current = true

[node name="VRCommonShaderCache" parent="XRCamera3D" instance=ExtResource("1_af6c4")]

[node name="LeftHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="MovementDirect" parent="LeftHand" instance=ExtResource("2_gjfns")]
strafe = true

[node name="LeftPhysicsHand" parent="LeftHand" instance=ExtResource("3_g2yue")]

[node name="GrabFunction" parent="LeftHand" instance=ExtResource("4_xy7vm")]
transform = Transform3D(1, 0, 0, 0, 0.999991, 0.00413642, 0, -0.00413642, 0.999991, 0, -0.054, 0.113)

[node name="RightHand" type="XRController3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[node name="FunctionTeleport" parent="RightHand" instance=ExtResource("5_qd4yl")]
valid_teleport_mask = 4291100657
teleport_button_action = "primary_click"

[node name="MovementTurn" parent="RightHand" instance=ExtResource("6_b3hsq")]

[node name="RightPhysicsHand" parent="RightHand" instance=ExtResource("7_8ghvb")]

[node name="GrabFunction" parent="RightHand" instance=ExtResource("4_xy7vm")]
picked_up_mask = 196615

[node name="PlayerBody" parent="." instance=ExtResource("8_t4vmy")]
collision_mask = 511

[node name="_CollisionShape3D_25031" type="CollisionShape3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_hbmkj")

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("10_nwkhs")
initial_state = NodePath("PlayMode")

[node name="PlayMode" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("settings_controller")]
script = ExtResource("10_djynx")
settings_controller = NodePath("../../LeftHand")

[node name="BuildMode" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("left_grab_function", "right_grab_function", "settings_controller")]
script = ExtResource("11_rdasi")
left_grab_function = NodePath("../../LeftHand/GrabFunction")
right_grab_function = NodePath("../../RightHand/GrabFunction")
settings_controller = NodePath("../../LeftHand")
